--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -60,6 +60,497 @@ header {
 
 button{
     visibility: hidden;
+    font-weight: 22vw;
+    
+}
+
+
+
+.menu{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 10px;
+    
+}
+
+
+
+.lista{
+    list-style-type: none;
+    display: flex; /* Torna a lista flexível */
+    text-decoration: none;
+}
+
+.lista li{
+    margin-right: 7vh;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: xx-large;
+   
+   
+}
+
+.lista a{
+    text-decoration: none;
+    color: inherit;
+    font-size: 1.3vw;
+}
+
+
+
+.container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 150%;
+    min-width: 100vw;
+    background-color: #f8f8ff;
+    padding-bottom: 8vh;
+}
+
+
+
+.title {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    border-bottom: 6px solid darkblue;
+    width: 600px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin:20px;
+}
+
+.title h2{
+ font-size: 1.7vw;
+}
+
+.chuch_image{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 60px;
+}
+
+
+
+.image {
+    width: 50vw;
+    height: 65vh;
+}
+
+.image2{
+    width: 50vw;
+    height: 65vh;
+}
+
+
+
+.about_us {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 10vh;
+    margin-left: 2vh;
+    padding-left: 20px;
+    width: 100%;
+    font-size: xx-large;
+}
+
+
+.text_about {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    line-height: 1.5;
+    max-width: 1200px;
+    font-size: xx-large;
+}
+
+
+.schedules {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 10vh;
+    margin-left: 2vh;
+    padding-left: 20px;
+    width: 100%;
+    font-size: xx-large;
+}
+
+.horarios {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
+    font-size: xx-large;
+    line-height: 1.9;
+   
+}
+
+.contact {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 10vh;
+    margin-left: 2vh;
+    padding-left: 20px;
+    width: 100%;
+    font-size: xx-large;
+}
+
+.contatos {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    line-height: 1.9;
+    padding-left: 20px;
+}
+
+.page1 {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.1vw;
+    width: 50vw;
+   
+}
+
+li {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.1vw;
+  
+
+}
+
+.dia_h3{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 1.2vw;
+}
+
+.dia{
+ display: flex;
+ justify-content: center;
+ width: 350px;
+}
+
+.dia li{
+ display: flex;
+ flex-direction: column;
+ justify-content: center;
+ align-items: center;
+ width: 350px;
+}
+
+
+
+.bold {
+    font-weight: bold;
+}
+
+
+#p{
+    padding-left: 118px;
+}
+
+footer {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    width: auto;
+    height: auto;
+    background-color: darkblue;
+    font-size: x-large;
+    line-height: 1.5;
+    color: #f8f8ff;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    padding-top: 2.5vh;
+    padding-bottom: 2.5vh;
+}
+
+
+
+
+
+/*------------------------- História ------------------*/
+
+#historia{
+    border-bottom: 7px solid blue;
+}
+
+.titulo {
+    display: flex;
+    justify-content: center;
+    margin: 10px 10px 30px 10px;
+}
+
+.versiculo{
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    margin: 20px;
+    margin-bottom: 8vh;
+    font-size: 0.8vw;
+}
+
+.biblia{
+    width: 80vw;
+    font-family: "Roboto Slab", serif;
+    font-weight: 400;
+    padding-bottom: 7px;
+}
+
+.foto_antiga{
+
+     display: flex;
+     justify-content: center;
+     text-align: center;
+     margin-top: 130px;
+     margin-bottom: 100px;
+     
+}
+
+.foto{
+    width: 1000px;
+    height: 2000px;
+}
+
+.history{
+    
+    width: 70vw;
+    font-size: xx-large;
+}
+
+.texto{
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    margin-bottom: 20vh;
+    
+}
+
+.page2{
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 1.4vw;
+    font-weight: 400;
+}
+
+
+/*-------------------------- Mensagens ------------------*/
+
+#mensagens{
+    border-bottom: 7px solid blue;
+}
+
+.reflection{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 70vw;
+    font-size: xx-large;
+    margin-bottom: 15vh;
+}
+
+.page3{
+
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 1.60vw;
+    font-weight: 400;
+    
+}
+
+
+/*----------------------------- Devocionais ------------------*/
+#devocionais{
+    border-bottom: 7px solid blue;
+}
+
+.video{
+ display: flex;
+ justify-content: center;
+ align-items: center;
+}
+
+.video_pastoral{
+    width: 40vw;
+    height: 50vh;
+}
+
+.local{
+    display: flex;
+    justify-content: center;
+}
+
+.video_pastoral::-webkit-media-controls{
+    display: flex;
+    height: 200px;
+}
+
+/*----------------------------- Localização ------------------------*/
+
+.endereço{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 30px 0px;
+    margin-left: 2vw;
+    line-height: 1.7;
+}
+
+#Localização{
+    border-bottom: 7px solid blue;
+}
+
+.mapa{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 100px;
+    margin-top: 30px;
+}
+
+.h1_endereço{
+    display: flex;
+    justify-content: center;
+    font-weight: 500;
+    width: 35vw;
+    height: 7vh;
+    margin: 20px;
+    margin-bottom: 50px;
+}
+.h1_endereço_2{
+    display: flex;
+    justify-content: center;
+    font-weight: 500;
+    margin-bottom: 20px;
+    height: 7vh;
+}
+
+
+.link{
+    display: flex;
+    justify-content: center;
+}
+
+
+/*----------------------------- Fotos ---------------------------*/
+#fotos{
+    border-bottom: 7px solid blue;
+}
+
+.container_fotos{
+    display: flex;
+    flex-direction: column;
+    height: 300%;
+    max-width: 100vw;
+    background-color: #f8f8ff;
+    padding-bottom: 8vh;
+}
+
+
+.title2{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+
+.title3{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 100px;
+    height: 30px;
+}
+
+
+.h3{
+    font-family: "Playfair Display", serif;
+    font-optical-sizing: auto;
+    font-weight:500;
+    font-size:2vw;
+    font-style: italic;
+    
+}
+
+.h5_fotos{
+    font-family:"Playfair Display", serif;
+    font-optical-sizing: auto;
+    font-weight: 500;
+    font-size:1vw
+    
+}
+
+* {
+    margin: 0;
+    padding: 0;
+}
+
+
+body,
+html {
+    display: flex;
+    flex-direction: column;
+    height: auto;
+    width: auto;
+    overflow-x: hidden;
+}
+
+.js{
+    opacity: 0;
+    filter: blur(5px);
+    transform: translateX(-100%);
+    transition: all 1.67s;
+ }
+ 
+ .show{
+     opacity: 1;
+     filter: blur(0px);
+     transform: translateX(0);
+     transition: all 1.67s;
+ }
+
+.header{
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    
+}
+
+.logo{
+
+   height: 200px;
+   width: 250px; 
+}
+
+header {
+    width: 100%;
+    height: 30%;
+    background-color: white;
+    max-width: 100vw;
+}
+
+#home{
+    border-bottom: 7px solid blue;
+}
+
+.label_menu, .checkbox{
+ font-size: 0vw;
+ cursor: pointer;
+ border: 0px solid white ;
+ display: none;
+}
+
+button{
+    visibility: hidden;
 }
 
 
@@ -441,25 +932,6 @@ footer {
     border-bottom: 7px solid blue;
 }
 
-.container_fotos{
-    display: flex;
-    flex-direction: column;
-    height: 300%;
-    max-width: 100vw;
-    background-color: #f8f8ff;
-    padding-bottom: 8vh;
-}
-
-
-
-.fotos_church .igreja{
-    width: 470px;
-    height: 430px;
-    box-shadow:  10px 5px 5px black;
-    transition: 0.45s ease-in-out;
-    border-radius: 10%;
-}
-
 
 .title2{
     display: flex;
@@ -497,29 +969,95 @@ footer {
     
 }
 
-
-
-.fotos_church{
+.centralizadinho{
     display: flex;
-    flex-wrap: wrap;
-    gap: 10px;
-    padding: 0;
+    justify-content: center;
+    width: auto;
+    height: auto;
+   
+}
+
+
+
+.carousel .carousel-item {
+    transition: none !important; /* Desativa transições nos itens do carrossel */
+}
+
+.carousel-image {
+    height: 90vh; /* Ajuste conforme necessário */
+    width: 100vw; /* Ajuste conforme necessário */
+    object-fit: cover;
+    min-height: auto; /* Força um tamanho mínimo */
+    min-width: auto; /* Força um tamanho mínimo */
+    transition: none; /* Desativa transições */
+}
+
+
+/*------------------------- CONTRIBUA ------------------*/
+#contribua{
+    border-bottom: 7px solid blue;
+}
+
+.pix{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 80px;
+    margin-bottom: 150px;
+}
+
+.qr_code{
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-bottom: 0;
-    margin-left: 20px;
-    width: 100%;
-    
+    border: 7px solid darkblue;
+    background-color: white;
+    border-radius: 7%;
+    height: 75vh;
+    width: 35vw;
+   
 }
 
-.foto{
-    height: auto;
-    width: 33%;
-    margin-bottom: 100px;
-    overflow: hidden;
+.cnpj{
+    display: flex;
+    flex-direction: column;
+    line-height: 1.7;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 50px;
+}
+
+.h2_contribua{
+ font-size:1.8vw ;
+ font-weight: 300;
 }
 
 
+.h3_contribua{
+    font-size: 2vw;
+    border: 4px solid black;
+    border-radius: 5%;
+    padding-left: 20px;
+    padding-right: 20px;
+    background-color: white;
+    color: black;
+    height: 87px;
+}
+
+.qr_code_image{
+    display: flex;
+    justify-content: center;
+}
+
+.qr_code_image img{
+    height: 30vh;
+    width: 17vw;
+}
+h4{
+    margin: 50px;
+    font-size: 1vw;
+}
 
 
 
@@ -633,24 +1171,13 @@ h4{
     width: 100%;
 }
 
-
-.fotos_church .igreja:hover{
-    transform: scale(1.2);
-    border-radius: 10%;
-    box-shadow: none ;
- 
-}
-
-
-
-
-
-
 /* ------------------------------------------ Media Query --------------------------------------------------------*/
 
 
 @media only screen and (max-width: 910px){ /*Somente para fazer o menu responsivo*/
    
+   
+
     button{
         visibility: visible;
     }
@@ -717,16 +1244,16 @@ h4{
     .header{
         margin-left: 0%;
     }
-
+   
 
      button{
         display: flex;
         width: 100%;
         justify-content: flex-end;
         align-items: center;
-        margin-right: 5%;
+        margin-right: 25px !important;
         cursor: pointer;
-        font-size: 50px;
+        font-size: 40px !important;
         background-color: white;
         border: none;
         gap: 20px;
@@ -831,8 +1358,8 @@ h4{
 }
 
 .video_pastoral{
-    width: 70vw;
-    height: 30vh;
+    width: 80vw;
+    height: 33vh;
 }
 
 .versiculo{
@@ -920,47 +1447,19 @@ h4{
      transition: all 1.0s;
  }
 
+ .centralizadinho{
+    height: auto;
+ }
+ .carousel-inner {
+    width: 100vw; /* Ocupa toda a largura no mobile */
+    height: 50vh; /* Reduz a altura para telas menores */
+}
+
+.carousel-image {
+    height: auto; /* A imagem se ajusta à altura do container */
+    width: auto;  /* A imagem se ajusta à largura do container */
+    object-fit: cover; /* Ajusta a imagem para cobrir o container sem distorcer */
 }
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+}
